adicionei css no portfólio

--- a/portfolio/projetosetrabalhos.html
+++ b/portfolio/projetosetrabalhos.html
@@ -4,8 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Projetos</title>
+    <link rel="stylesheet" href="projetos.css">
 </head>
 <body>
+    <nav>
+            <a href="index.html">Home</a>
+            <a href="projetosetrabalhos.html">Projetos e Trabalhos</a>
+            <a href="habilidades.html">Habilidades e Competências</a>
+            <a href="contatos.html">Contatos</a>
+    </nav> 
+
     <header>
     <h1>Meus projetos e Trabalhos</h1>
     </header>
@@ -33,22 +41,5 @@
     <p>A base é feita de bambu e por dentro ao invés de ter o plástico convencional, era composto por flores secas</p>
 </article>
 </main>
-<footer>
-    <nav>
-        <li>
-            <a href="index.html">Home</a>
-        </li>
-        <li>
-            <a href="projetosetrabalhos.html">Projetos e Trabalhos</a>
-        </li>
-        <li>
-            <a href="habilidades.html">Habilidades e Competências</a>
-        </li>
-        <li>
-            <a href="contatos.html">Contatos</a>
-        </li>
-        </ul>
-    </nav>
-</footer>
 </body>
 </html>
